# marketlab

./: .env.example  DEVELOPMENT.md  README.md  compose.yaml  compose.yml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE  dependabot.yml
.github/workflows/: code-review.yml  deploy.yml
site/: .gitignore  .prettierignore  .prettierrc.mjs  dev.Dockerfile  env.d.js  observablehq.config.js  package-lock.json  package.json  playwright.config.js  pyproject.toml  wrangler.toml
site/functions/api/: yf.js
site/src/: 404.md  index.md
site/src/components/: prices.js  returns.js  yf.js
site/src/data/: sp500-and-msci-world.csv.py
site/src/tools/: fund-switch.md  rolling-returns.md
site/static/: robots.txt
site/static/.well-known/: security.txt
site/tests/: home.spec.js
