[build-system]
requires = ["poetry-core~=2.1"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
pandas = "~=2.3"
python = "~=3.10"
yfinance = "~=0.2"

[tool.poetry.group.dev.dependencies]
ruff = "~=0.12"


[tool.ruff.lint]
select = ["COM", "I"]
ignore = ["E731"]
isort.lines-after-imports = 2
